--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 
     <section class="hero">
         <h1>Best WhatsApp Bot Script</h1>
-        <p>Automate your chat with style. Fast, Secure & Aesthetic.</p>
+        <p>New Update Available! Grab yours now.</p>
     </section>
 
     <div class="container">
         <div class="product-grid">
 
             <div class="card">
+                <span class="update-badge">New Update 1 Hari yang lalu</span>
                 <div class="icon-box">🤖</div>
                 <h3>Script Bot Basic</h3>
                 <div class="price-tag">Rp 10.000</div>
@@ -35,51 +36,102 @@
                     <li>Fitur Sticker & Menu Dasar</li>
                     <li>Anti Link Group</li>
                     <li>Response Cepat</li>
-                    <li>No Encrypt (Open Source)</li>
+                    <li>No Encrypt</li>
                 </ul>
-                <button class="btn-buy" onclick="buyScript('Basic', '10.000')">
-                    Beli via WhatsApp 
-                </button>
+                <button class="btn-buy" onclick="buyScript('Basic Script', '10.000')">Beli Sekarang</button>
             </div>
 
             <div class="card">
+                <span class="update-badge">New Update 1 Hari yang lalu</span>
+                <div class="icon-box">📢</div>
+                <h3>Script Push Kontak</h3>
+                <div class="price-tag">Rp 15.000</div>
+                <ul class="features">
+                    <li>Auto Save Nomor</li>
+                    <li>Broadcast ke Group</li>
+                    <li>Push Kontak Jitu</li>
+                    <li>Anti Banned (Safe Mode)</li>
+                </ul>
+                <button class="btn-buy" onclick="buyScript('Push Kontak Script', '15.000')">Beli Sekarang</button>
+            </div>
+
+            <div class="card">
+                <span class="update-badge">New Update 1 Hari yang lalu</span>
+                <div class="icon-box">🤡</div>
+                <h3>Script Sticker & Fun</h3>
+                <div class="price-tag">Rp 20.000</div>
+                <ul class="features">
+                    <li>Sticker GIF/Video</li>
+                    <li>To Image/To Audio</li>
+                    <li>Fitur Prank & Bug Text</li>
+                    <li>Game Tebak-tebakan</li>
+                </ul>
+                <button class="btn-buy" onclick="buyScript('Sticker Fun Script', '20.000')">Beli Sekarang</button>
+            </div>
+
+            <div class="card">
+                <span class="update-badge">New Update 1 Hari yang lalu</span>
                 <div class="icon-box">⚡</div>
                 <h3>Script Bot Premium</h3>
                 <div class="price-tag">Rp 25.000</div>
                 <ul class="features">
-                    <li>Semua Fitur Basic</li>
-                    <li>Fitur Download (TT/IG/YT)</li>
+                    <li>Downloader (TT/IG/YT)</li>
                     <li>Welcome & Goodbye Msg</li>
                     <li>Game RPG Simple</li>
+                    <li>Database JSON</li>
                 </ul>
-                <button class="btn-buy" onclick="buyScript('Premium', '25.000')">
-                    Beli via WhatsApp
-                </button>
+                <button class="btn-buy" onclick="buyScript('Premium Script', '25.000')">Beli Sekarang</button>
             </div>
 
             <div class="card">
+                <span class="update-badge">New Update 1 Hari yang lalu</span>
+                <div class="icon-box">💎</div>
+                <h3>Script Auto TopUp</h3>
+                <div class="price-tag">Rp 35.000</div>
+                <ul class="features">
+                    <li>Connect Digiflazz/VIP</li>
+                    <li>Auto Deposit Saldo</li>
+                    <li>Cek Mutasi Otomatis</li>
+                    <li>Struk Pembelian Dinamis</li>
+                </ul>
+                <button class="btn-buy" onclick="buyScript('TopUp PPOB Script', '35.000')">Beli Sekarang</button>
+            </div>
+
+            <div class="card">
+                <span class="update-badge">New Update 1 Hari yang lalu</span>
+                <div class="icon-box">🧠</div>
+                <h3>Script AI Intelligence</h3>
+                <div class="price-tag">Rp 40.000</div>
+                <ul class="features">
+                    <li>Integrasi ChatGPT 4</li>
+                    <li>Dalle Image Generator</li>
+                    <li>Voice Recognition</li>
+                    <li>Coding Helper Mode</li>
+                </ul>
+                <button class="btn-buy" onclick="buyScript('AI ChatGPT Script', '40.000')">Beli Sekarang</button>
+            </div>
+
+            <div class="card">
+                <span class="update-badge">New Update 1 Hari yang lalu</span>
                 <div class="icon-box">👑</div>
                 <h3>Script Bot Ultimate</h3>
                 <div class="price-tag">Rp 50.000</div>
                 <ul class="features">
                     <li>Full Fitur Store Otomatis</li>
-                    <li>Broadcast & Push Kontak</li>
-                    <li>Panel Admin Khusus</li>
+                    <li>Panel Admin Web Khusus</li>
+                    <li>Sewa Bot ke Group</li>
                     <li>Support Update 1 Bulan</li>
                 </ul>
-                <button class="btn-buy" onclick="buyScript('Ultimate', '50.000')">
-                    Beli via WhatsApp
-                </button>
+                <button class="btn-buy" onclick="buyScript('Ultimate Script', '50.000')">Beli Sekarang</button>
             </div>
 
         </div>
     </div>
 
     <footer>
-        &copy; 2024 Liviaa SHOP. All Rights Reserved.
+        &copy; 2025 Liviaa SHOP. All Rights Reserved.
     </footer>
 
     <script src="script.js"></script>
-
 </body>
 </html>
